<resources>
    <string name="app_name">pilem</string>
    <string name="watchlist">Watchlist</string>
    <string name="tonton_trailer">Tonton Trailer</string>
    <string name="overview">Overview</string>
    <string name="top_billed_cast">Top Billed Cast</string>
    <string name="back">Back</string>
    <string name="add_to_watchlist">Add to Watchlist</string>
    <string name="remove_from_watchlist">Remove from Watchlist</string>
</resources>